refactor/openEO : manage external Stac in processes, add load_stac openEO function